--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 num_cpus = "1.16.0"
 reqwest = { version = "0.11.20", features = ["json"] }
 scraper = "0.17.1"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
+thiserror = "1.0.48"
 tokio = { version = "1.32.0", features = ["full"] }
