--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
 thiserror = "1.0.48"
 tokio = { version = "1.32.0", features = ["full"] }
+html5ever = "0.25"
+select = "0.6"
