--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 num_cpus = "1.16.0"
-reqwest = { version = "0.11.20", features = ["json"] }
+reqwest = { version = "0.11.20", features = ["json", "blocking"] }
 scraper = "0.17.1"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
@@ -16,3 +16,4 @@ thiserror = "1.0.48"
 tokio = { version = "1.32.0", features = ["full"] }
 html5ever = "0.25"
 select = "0.6"
+retry = "2.0.0"
