--- a/app/package.json
+++ b/app/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "xano",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/figlet": "^1.5.6",
-    "bun-types": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "figlet": "^1.6.0"
-  }
+    "name": "xano",
+    "module": "index.ts",
+    "type": "module",
+    "devDependencies": {
+        "@types/figlet": "^1.5.6",
+        "bun-types": "latest"
+    },
+    "peerDependencies": {
+        "typescript": "^5.0.0"
+    },
+    "dependencies": {
+        "@notionhq/client": "^2.2.13",
+        "dotenv": "^16.3.1"
+    }
 }
